# multisurface_projector

./: LICENSE  README.md
2013-Nov-24_20.49.04.938/: projector_info.txt
GrayLookup/: glut_ply.cpp  gray_lookup.cpp  gray_lookup.hpp  polym_to_opengl.cpp
MATLAB/: gray_LUT_indexing.matlab  luts.cpp
ShaderProgram/: .proj_vert.glsl.kate-swp  .projection.cpp.kate-swp  .single_vert.glsl.kate-swp  Makefile  ShaderProgram.cpp  ShaderProgram.h  boxwall_manual_clean.ply  controls.cpp  f.glsl  frag.glsl  objloader.cpp  proj_frag.glsl  proj_vert.glsl  projection.cpp  shaderTest  shaderTest.cpp  single_vert.glsl  vert.glsl
StereoMatch/: Makefile  match.cpp
SurfaceMapper/: .ActiveStereoMap.cpp.kate-swp  ActiveCalib.cpp  ActiveCalib.hpp  ActiveStereoMap  ActiveStereoMap.cpp  ActiveStereoMap.hpp  Makefile  ProcGen.cpp  ProcGen.hpp  Reconstructor.cpp  Reconstructor.hpp  cal_points.set  cal_points_backup.set  cal_points_golden.set  cal_values.txt  calibration.yml  (+4 more)
pclManip/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  b.ply  b2.ply  b3.ply  b4.ply  b5.ply  best_mesh.obj~  best_mesh.ply  best_mesh2.ply  boxwall.ply~  boxwall_2.ply  boxwall_3.ply  boxwall_4.ply  boxwall_filtered.ply  boxwall_filtered.ply~  cmake_install.cmake  pclManipTest  pclManipTest.cpp  pclManipTest.cpp~  pclManipulator.cpp  pclManipulator.cpp~  pclManipulator.hpp  pclManipulator.hpp~  progamOut.txt  shaderPCLTest.cpp  shaderPCLTest.cpp~  vOut.txt  vOut2.txt  vOut3.txt
pclManip/shaderStuff/: CMakeLists.txt  Makefile  cmake_install.cmake  controls.hpp  shaderTest.cpp  shaderTest.cpp~
(+54 files in other folders)
